--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -79,7 +79,7 @@
                 android:id="@+id/cart_total_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="$1250.00"
+                android:text="125.000VNĐ"
                 android:textStyle="bold"
                 android:textSize="20dp"
                 />
