--- a/app/src/main/res/layout/activity_doi_mk.xml
+++ b/app/src/main/res/layout/activity_doi_mk.xml
@@ -1,13 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".Activity.Activity_DoiMK">
-
+    tools:context=".Activity.Activity_DoiMK"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
     <ImageView
         android:id="@+id/imgBack_doiMK"
@@ -19,194 +20,179 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_back" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="3dp" />
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="112dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="30dp"
         android:text="Đổi mật khẩu"
         android:textColor="@color/black"
-        android:textSize="20dp"
+        android:textSize="22sp"
         android:textStyle="bold"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imgBack_doiMK"
+        app:layout_constraintStart_toEndOf="@id/imgBack_doiMK"
         app:layout_constraintTop_toTopOf="parent" />
-
-<!--    <ImageView-->
-<!--        android:id="@+id/imageCP"-->
-<!--        android:layout_width="200dp"-->
-<!--        android:layout_height="200dp"-->
-<!--        android:layout_marginTop="24dp"-->
-<!--        android:layout_marginEnd="104dp"-->
-<!--        android:src="@drawable/changepass"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/textView" />-->
-    />
 
     <TextView
         android:id="@+id/tv_oldPass_doiMK"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:text="Mật khẩu cũ"
         android:textColor="@color/black"
-        android:textSize="25dp"
+        android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cvOderForShop"
+        android:id="@+id/cvOldPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_rowWeight="1"
-        android:layout_columnWeight="1"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp"
-        android:backgroundTint="@color/white"
         app:cardCornerRadius="8dp"
-        app:cardElevation="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_oldPass_doiMK"
-        >
+        app:cardElevation="4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_oldPass_doiMK">
 
-        <EditText
-            android:id="@+id/editOldPass_doiMK"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/edittext_background2"
-            android:ems="10"
-            android:hint="Nhập mật khẩu cũ của bạn"
-            android:inputType="text"
-            android:padding="12dp"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            />
-    </androidx.cardview.widget.CardView>
+            android:layout_height="wrap_content">
 
+            <EditText
+                android:id="@+id/editOldPass_doiMK"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toStartOf="@+id/imgToggleOldPass"
+                android:hint="Nhập mật khẩu cũ của bạn"
+                android:inputType="textPassword"
+                android:padding="12dp"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+
+            <ImageView
+                android:id="@+id/imgToggleOldPass"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:padding="4dp"
+                android:src="@drawable/baseline_visibility_24" />
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/tv_newPass_doiMK"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:text="Mật khẩu mới"
-        android:textColor="@color/black"
-        android:textSize="25dp"
         android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cvOderForShop" />
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cvOldPassword" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cvOderForShop1"
+        android:id="@+id/cvNewPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_rowWeight="1"
-        android:layout_columnWeight="1"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp"
-        android:backgroundTint="@color/white"
         app:cardCornerRadius="8dp"
-        app:cardElevation="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_newPass_doiMK"
-        >
+        app:cardElevation="4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_newPass_doiMK">
 
-        <EditText
-            android:id="@+id/editNewPass_doiMK"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/edittext_background2"
-            android:ems="10"
-            android:hint="Nhập mật khẩu mới của bạn"
-            android:inputType="text"
-            android:padding="12dp"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            />
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/editNewPass_doiMK"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toStartOf="@+id/imgToggleNewPass"
+                android:hint="Nhập mật khẩu mới của bạn"
+                android:inputType="textPassword"
+                android:padding="12dp"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+
+            <ImageView
+                android:id="@+id/imgToggleNewPass"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:padding="4dp"
+                android:src="@drawable/baseline_visibility_24" />
+        </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/tv_confPass_doiMK"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
-        android:text="Xác nhận lại mật khẩu"
+        android:text="Xác nhận mật khẩu"
         android:textColor="@color/black"
-        android:textSize="25dp"
         android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cvOderForShop1" />
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cvNewPassword" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cvOderForShop2"
+        android:id="@+id/cvConfirmPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_rowWeight="1"
-        android:layout_columnWeight="1"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp"
-        android:backgroundTint="@color/white"
         app:cardCornerRadius="8dp"
-        app:cardElevation="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_confPass_doiMK"
-        >
+        app:cardElevation="4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_confPass_doiMK">
 
-        <EditText
-            android:id="@+id/editConfPass_doiMK"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/edittext_background2"
-            android:ems="10"
-            android:hint="Nhập lại mật khẩu mới của bạn"
-            android:inputType="text"
-            android:padding="12dp"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            />
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/editConfPass_doiMK"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toStartOf="@+id/imgToggleConfPass"
+                android:hint="Nhập lại mật khẩu mới của bạn"
+                android:inputType="textPassword"
+                android:padding="12dp"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+
+            <ImageView
+                android:id="@+id/imgToggleConfPass"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:padding="4dp"
+                android:src="@drawable/baseline_visibility_24" />
+        </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cvOderForShop4"
+    <Button
+        android:id="@+id/btnChangePass_doiMK"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_rowWeight="1"
-        android:layout_columnWeight="1"
-        android:layout_marginLeft="8dp"
-        android:backgroundTint="@color/white"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent">
-
-        <Button
-            android:id="@+id/btnChangePass_doiMK"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginEnd="8dp"
-            android:text="Đổi mật khẩu"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:backgroundTint="@color/blue"
-            />
-    </androidx.cardview.widget.CardView>
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="32dp"
+        android:text="Đổi mật khẩu"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:backgroundTint="@color/blue"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cvConfirmPassword" />
 </androidx.constraintlayout.widget.ConstraintLayout>
