--- a/app/src/main/res/layout/activity_xacthucemailmoi.xml
+++ b/app/src/main/res/layout/activity_xacthucemailmoi.xml
@@ -161,15 +161,15 @@
         android:textColor="@android:color/white"/>
 
     <!-- Liên kết gửi lại mã -->
-    <TextView
-        android:id="@+id/tvResendCode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Gửi lại bây giờ"
-        android:textSize="14sp"
-        android:textColor="@android:color/holo_blue_dark"
-        app:layout_constraintTop_toBottomOf="@id/btnChangeEmail"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp"/>
+<!--    <TextView-->
+<!--        android:id="@+id/tvResendCode"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Gửi lại bây giờ"-->
+<!--        android:textSize="14sp"-->
+<!--        android:textColor="@android:color/holo_blue_dark"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/btnChangeEmail"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        android:layout_marginTop="8dp"/>-->
 </androidx.constraintlayout.widget.ConstraintLayout>
