--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -1,74 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginBottom="16dp"
-    android:gravity="center_vertical">
+    android:layout_marginBottom="16dp">
 
-    <!-- Hình ảnh của sản phẩm -->
+    <!-- Checkbox for selecting the item -->
     <CheckBox
         android:id="@+id/checkGH"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="304dp"
-        android:layout_marginTop="28dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp" />
 
+    <!-- Product image -->
     <ImageView
         android:id="@+id/cart_item_image"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
         android:scaleType="centerCrop"
         android:src="@drawable/nice_shoe"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@id/checkGH"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp" />
 
-    <!-- Thông tin sản phẩm -->
-    <LinearLayout
+    <!-- Product details container -->
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        app:layout_constraintLeft_toRightOf="@id/cart_item_image"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintStart_toEndOf="@id/cart_item_image"
+        app:layout_constraintEnd_toStartOf="@id/cart_item_size"
+        app:layout_constraintTop_toTopOf="@id/cart_item_image"
+        android:layout_marginStart="8dp">
 
+        <!-- Product name -->
         <TextView
             android:id="@+id/cart_item_name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:maxLines="1"
             android:text="Nike Air Max"
             android:textColor="@android:color/black"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
+        <!-- Product price -->
         <TextView
             android:id="@+id/cart_item_price"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="64.000VNĐ"
             android:textColor="@android:color/darker_gray"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cart_item_name"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-        <!-- Điều khiển số lượng -->
+        <!-- Quantity controls -->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/cart_item_price"
+            app:layout_constraintStart_toStartOf="parent">
 
-            <!-- Nút giảm số lượng -->
+            <!-- Decrease quantity button -->
             <ImageView
                 android:id="@+id/btn_decrease"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:src="@drawable/baseline_horizontal_rule_24" />
 
-            <!-- Số lượng sản phẩm -->
+            <!-- Quantity text -->
             <TextView
                 android:id="@+id/cart_item_quantity"
                 android:layout_width="wrap_content"
@@ -78,35 +89,35 @@
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
 
-            <!-- Nút tăng số lượng -->
+            <!-- Increase quantity button -->
             <ImageView
                 android:id="@+id/btn_increase"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/plus" />
         </LinearLayout>
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <!-- Nút xóa sản phẩm -->
+    <!-- Product size -->
     <TextView
         android:id="@+id/cart_item_size"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:gravity="center"
         android:text="40"
-        app:layout_constraintBottom_toTopOf="@id/btn_delete"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp" />
 
+    <!-- Delete button -->
     <ImageView
         android:id="@+id/btn_delete"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:src="@drawable/delete"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cart_item_size" />
+        app:layout_constraintTop_toBottomOf="@id/cart_item_size"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
